--- a/.github/workflows/nonproduction.yaml
+++ b/.github/workflows/nonproduction.yaml
@@ -28,5 +28,5 @@ jobs:
           npm ci
           npm run build
       - name: deploy site to bucket
-        run: aws s3 cp public s3://{{ env.BUCKET_NAME }}/ --recursive --acl public-read
+        run: aws s3 cp public s3://${{ env.BUCKET_NAME }}/ --recursive --acl public-read
         
